test/fail/basic_syntax/else_without_if.lily
#[
SyntaxError: 'else' without 'if'.
    from else_without_if.lily:6:
]#

else
